--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-  "name": "helioslauncher",
-  "version": "2.0.5",
-  "productName": "Helios Launcher",
-  "description": "Modded Minecraft Launcher",
-  "author": "Daniel Scalzi (https://github.com/dscalzi/)",
+  "name": "fixtiumlauncher",
+  "version": "1.0.0",
+  "productName": "Fixtium Launcher",
+  "description": "Modded Minecraft Launcher for fixtium ",
+  "author": "Daniel Scalzi (https://github.com/dscalzi/) and 5h4d0x",
   "license": "UNLICENSED",
-  "homepage": "https://github.com/dscalzi/HeliosLauncher",
+  "homepage": "https://github.com/5h4d0x/FixtiumLauncher",
   "bugs": {
-    "url": "https://github.com/dscalzi/HeliosLauncher/issues"
+    "url": "https://github.com/5h4d0x/FixtiumLauncher/issues"
   },
   "private": true,
   "main": "index.js",
@@ -46,6 +46,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dscalzi/HeliosLauncher.git"
+    "url": "git+https://github.com/5h4d0x/FixtiumLauncher.git"
   }
 }
